.k8s/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  namespace: services
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: teste.whoam.site 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway 
                port:
                  number: 80
